gamlab_dev_workstation: merge linux_rdp role; do not force install ntp (handled by server_hardening) and remove unattended-updates (handled by apt)

--- a/roles/gamlab_dev_workstation/tasks/linux.yml
+++ b/roles/gamlab_dev_workstation/tasks/linux.yml
@@ -57,3 +57,7 @@
     - name: Add install dev tools
       import_tasks: linux-install-dev-tools.yml
       when: install_script
+
+    - name: Configure remote-access
+      import_tasks: linux-remote-access.yml
+      when: remote_access
