containers: set live-restore in docker by default

--- a/roles/containers/defaults/main.yml
+++ b/roles/containers/defaults/main.yml
@@ -2,3 +2,5 @@ docker_autoclean: false
 
 # Setting this to true prevents the playbook to set a sane log default
 docker_manual_log_config: false
+
+docker_live_restore_enabled: true
