--- a/roles/android/tasks/main.yml
+++ b/roles/android/tasks/main.yml
@@ -14,6 +14,10 @@
       import_tasks: linux-android-studio.yml
       when: install_studio and ansible_system == "Linux" and ansible_machine == 'x86_64'
 
+- name: Install macOS requirements
+  import_tasks: macos-requirements.yml
+  when: install_sdk and (ansible_system == "Darwin" and ansible_distribution == "MacOSX")
+
 - name: Install Android SDK on macOS
   import_tasks: macos-android-sdk.yml
   when: install_sdk and (ansible_system == "Darwin" and ansible_distribution == "MacOSX")
