--- a/roles/flutter/tasks/debian.yml
+++ b/roles/flutter/tasks/debian.yml
@@ -14,6 +14,7 @@
           - git
           - curl
           - bash
+          - file
 
     - name: Expand tilde in flutter_basedir
       set_fact:
