--- a/roles/flutter/tasks/main.yml
+++ b/roles/flutter/tasks/main.yml
@@ -3,5 +3,5 @@
   when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
 
 - name: Install Flutter on macOS
-  import_tasks: macos.yml
+  include_tasks: macos.yml
   when: ansible_system == "Darwin" and ansible_distribution == "MacOSX"
